--- a/frontend/src/components/componentCSS/Navbar.module.css
+++ b/frontend/src/components/componentCSS/Navbar.module.css
@@ -3,12 +3,22 @@
     width: 100%;
     top: 0;
     left: 0;
-    background-color: rgba(4, 38, 137, 0.816);
+    background-color: #161616;
     color: white;
     font-family: 'Exo 2', sans-serif;
-    padding: 1em;
+    padding-bottom: 1rem;
+    z-index: 3;
 }
 
-.button {
+.Navbar h1 {
+    padding: 0rem;
+}
+
+.Navbar button {
     margin-right: 10px;
+    background-color: #007bff;
+}
+
+.Navbar button:hover {
+    background-color: #0056b3;
 }
