--- a/frontend/src/components/componentCSS/Portfolio.module.css
+++ b/frontend/src/components/componentCSS/Portfolio.module.css
@@ -75,11 +75,14 @@
 }
 
 #SwitchButton {
-    margin-top: 4rem;
     margin-left: 10px;
     background-color: #007bff;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+#CashValue {
+    margin-top: 7rem;
 }
